2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: Use <replaceable> for the values set by
	users. (was sometimes <emphasis remap='I'>)
	* man/login.defs.5.xml: Use <option> vor the variable names. This
	makes the manpage much more readable.
	* man/login.defs.5.xml (ENCRYPT_METHOD, MD5_CRYPT_ENAB,
	SHA_CRYPT_MIN_ROUNDS, SHA_CRYPT_MAX_ROUNDS): Mention that command
	line option may supersede the system setting.
	* man/login.defs.5.xml: Document the variables used by chpasswd
	and chgpasswd.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/shadowmem.c, lib/groupmem.c, lib/pwmem.c:
	svn propset svn:keywords Id

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, lib/getdef.c, man/login.defs.5.xml: New login.defs
	variable: MAX_MEMBERS_PER_GROUP. Used for the split groups support.
	* lib/commonio.c, lib/commonio.h: Add an open_hook and close_hook
	operation. They are called after the database is actually opened
	and parse, or before it is closed.
	* lib/groupio.c: Add an open_hook to merge split groups, and an
	close group to split groups if MAX_MEMBERS_PER_GROUP is set.
	This fixes gpasswd and chgpasswd when split groups are used.
	* lib/sgroupio.c, lib/shadowio.c, lib/pwio.c: No open or close
	hooks for these databases. (unsure about what should be the gshadow
	behavior for split groups)

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Read the group and shadow groups using
	gr_locate and sgr_locate. gpasswd write in the file database. Thus
	it should read information from the file database, not using
	getgrnam. The change to sgr_locate is just for consistency. This
	requires opening the group databases (read only) using
	gr_open/sgr_open.

2007-11-22  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: SHADOWGRP added to AM_CONDITIONAL for the
	generation of manpages.